--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,9 +14,10 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.89.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "@validation": "*"
+    "validation": "../../packages/validation",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "dev": "react-scripts start",
@@ -41,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "3"
   }
 }
