fix(client): tailwindcss issue feat(client): add login page (without functionalities) and migrate from cra to vite

--- a/apps/client/components.json
+++ b/apps/client/components.json
@@ -4,9 +4,9 @@
   "rsc": false,
   "tsx": true,
   "tailwind": {
-    "config": "",
-    "css": "src/App.css",
-    "baseColor": "neutral",
+    "config": "tailwind.config.js",
+    "css": "src/index.css",
+    "baseColor": "zinc",
     "cssVariables": true,
     "prefix": ""
   },
