--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
@@ -22,6 +23,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "jalali-moment": "^3.3.11",
     "lucide-react": "^0.511.0",
     "react": "^19.1.0",
