--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
@@ -23,7 +25,9 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.18",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
