--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -22,7 +22,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "validation": "../../packages/validation"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
