--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -18,17 +18,19 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "ms": "^2.1.3",
     "pg": "^8.16.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7",
     "sequelize-cli": "^6.6.3",
-    "zod": "^3.24.4",
-    "validation": "../../packages/validation"
+    "validation": "../../packages/validation",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^3.0.0",
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/ms": "^2.1.0",
     "@types/node": "^22.15.18",
     "@types/sequelize": "^4.28.20",
     "nodemon": "^3.1.10",
