feat: Implement authentication and authorization
- Added login functionality.
- Implemented logout functionality.
- Added user authentication middleware.
- Improved error handling.
- Added a toast notification for successful login.
- Implemented user authorization. (main)

--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,9 @@
 {
+  "$schema": "https://turborepo.org/schema.json",
   "tasks": {
     "dev": {
-      "cache": false
+      "cache": false,
+      "persistent": true
     },
     "build": {
       "dependsOn": ["^build"],
