--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-direction": "^1.1.1",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.2.6",
@@ -35,8 +36,8 @@
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "validation": "../../packages/validation",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "validation": "1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
